use more efficient valueOf() factories for numbers and booleans (FindBugs)
git-svn-id: https://svn.apache.org/repos/asf/velocity/tools/branches/2.x@564006 13f79535-47bb-0310-9956-ffa450edef68